# Shortn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
Auth/: README.md  serializers.py  tests.py  urls.py  views.py
QR/: README.md  apps.py  consumers.py  models.py  tests.py  urls.py  views.py
QR/management/commands/: consume_qr_events.py
QR/migrations/: 0001_initial.py
Shorten/: README.md  apps.py  consumers.py  models.py  serializers.py  tests.py  urls.py  views.py
Shorten/management/commands/: consume_shorten_events.py
Shorten/migrations/: 0001_initial.py  0002_shortenedurl_ip_address_alter_shortenedurl_id.py  0003_alter_shortenedurl_options_and_more.py
core/: README.md  asgi.py  logging.py  middleware.py  settings.py  urls.py  wsgi.py
events/: __init__.py  consumer.py  producer.py  schemas.py  topics.py
