[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Camryn Crowder <camryn.crowder@apkudo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
qrcode = "^8.0"
pillow = "^11.1.0"


[virtualenvs]
create = true
in-project = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
